Add unified logging file output